# tds-project1

./: .env.example  .gitignore  AIPIPE_INTEGRATION.md  Dockerfile  README.md  README_HF.md  deploy.sh  init_logs.py  main.py  pyproject.toml  quick_test.sh  requirements.txt  simple_test.json  test_ai_simple.py  test_config.py  test_deployment.py  test_local.py  test_request.json
logs/: README.md
src/: __init__.py  app.py  main.py
src/Config/: config.py
src/Models/: models.py
src/services/: ai_service.py  github_service.py  task_service.py
src/tests/: test_dynamic_generation.py  test_modular_architecture.py  test_pydantic_ai.py  test_workflow.py
