[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "student-task-processor"
version = "1.0.0"
description = "AI-powered student task processing system with GitHub integration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-ai>=0.0.12",
    "httpx>=0.25.0",
    "requests>=2.31.0",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0"
]

[project.urls]
Homepage = "https://github.com/username/student-task-processor"
Documentation = "https://github.com/username/student-task-processor#readme"
Repository = "https://github.com/username/student-task-processor.git"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true